# simulateur-de-fluide

./: .gitgnore  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
externe/fmodstudioapi20309linux/api/fsbank/lib/x86_64/: libfsbank.so.14  libfsbankL.so.14
externe/fmodstudioapi20309linux/doc/: revision.txt
externe/glad/include/glad/: glad.h
externe/glad/src/: glad.c
include/: app.hpp  live_fenetre.hpp  shader.h  triangle.h
shader/fragmen/: tr.fs
shader/vertex/: tr.vs
shaders/: tr.vs
shaders/fragmen/: tr.fs
shaders/vertex/: tr.vs
src/: main.cpp  particule.cpp  shader  shader.cpp  triangle.cpp
src/render/: scene.cpp
src/render/vulkan/: app.cpp  fenetre.cpp  fenetre_app.cpp  live_fenetre.cpp
